Settings: Long Term Orbits (LTO)
Change-Id: I1fbdba644fc05d55fc096b47bfac3f9903383370
Signed-off-by: Jorge Ruesga <jorge@ruesga.com>

Conflicts:
	AndroidManifest.xml
	res/values/cm_strings.xml

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2538,5 +2538,12 @@
                 <action android:name="cyanogenmod.intent.action.WIFI_WAKEUP" />
             </intent-filter>
         </service>
+
+        <service android:label="LtoService"
+            android:enabled="true"
+            android:exported="false"
+            android:name=".cyanogenmod.LtoService">
+        </service>
+
     </application>
 </manifest>
