RAM bar (2/2) ------------ I'm not author of this code, I believed this code is from Slim Roms, Modified by Cristiano Matos. Cherry pick from Pac KK 4.4 and port to cmRemiX Lollipop by Zion959 Credit to Cristiano Matos & Pac & Slim Roms Thank you all
Change-Id: I0f47445618a991e310923e2b85e180e921c57742

Conflicts:
	AndroidManifest.xml
	res/values/cr_strings.xml

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2336,6 +2336,19 @@
         <activity android:name=".temasek.gestureanywhere.GestureAnywhereBuilderActivity" />
         <activity android:name=".temasek.gestureanywhere.GestureAnywhereCreateGestureActivity" />
 
+        <activity android:name=".temasek.RamBar" />
+
+        <!-- Pseudo-activity used to provide an intent-filter entry point to ass display rotation config -->
+        <activity android:name="Settings$ASSRamBarActivity"
+                android:label="@string/ram_bar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.android.settings.temasek.RamBar" />
+        </activity>
+
         <provider
             android:name=".search.SettingsSearchIndexablesProvider"
             android:authorities="com.android.settings"
