--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2532,5 +2532,11 @@
             </intent-filter>
         </receiver>
 
+        <service android:label="WifiWakeupService"
+                 android:name=".wifi.WifiWakeupService">
+            <intent-filter>
+                <action android:name="cyanogenmod.intent.action.WIFI_WAKEUP" />
+            </intent-filter>
+        </service>
     </application>
 </manifest>
